Add listCountries
