# openapi.yaml
@@ -63,6 +63,34 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/errorResponse'
+    /{apiToken}/json/listCountries:
+        get:
+            operationId: listCountries
+            externalDocs:
+                url: https://docs.digistore24.com/knowledge-base/listcountries/
+            parameters:
+                -   $ref: '#/components/parameters/apiToken'
+                -   $ref: '#/components/parameters/operator'
+                -   $ref: '#/components/parameters/language'
+            responses:
+                200:
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/listCountriesResponse'
+                4XX:
+                    description: 'Client error'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errorResponse'
+                5XX:
+                    description: 'Server error'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errorResponse'
     /{apiToken}/json/listDeliveries:
         get:
             operationId: listDeliveries
@@ -242,6 +270,31 @@ components:
                             type: array
                             items:
                                 $ref: '#/components/schemas/listBuyUrls'
+        listCountriesResponse:
+            type: object
+            properties:
+                api_version:
+                    type: string
+                    nullable: false
+                current_time:
+                    type: string
+                    nullable: false
+                timezone:
+                    type: string
+                    nullable: false
+                utc_offset:
+                    type: string
+                    nullable: false
+                result:
+                    type: string
+                    nullable: false
+                    default: success
+                data:
+                    # TODO use draft-06 patternProperties or propertyNames bypassed by using anyOf
+                    nullable: false
+                    anyOf:
+                        -   type: string
+                        -   type: string
         listDeliveries:
             type: object
             # TODO add properties
